NXT-2990: WIP
NXT-2990 (Create endpoint to fetch all versions for a space item via Gateway API)